src/objects/Flight__c.object
<CustomObject>
    <fields>
        <fullName>FlightCompany__c</fullName>
        <label>Flight Company</label>
        <referenceTo>FlightCompany__c</referenceTo>
        <relationshipLabel>Flights</relationshipLabel>
        <relationshipName>Flights</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Flight</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Flight Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flights</pluralLabel>
    <recordTypes>
        <fullName>BusinessClass</fullName>
        <active>true</active>
        <label>Business Class</label>
    </recordTypes>
    <recordTypes>
        <fullName>EconomyClass</fullName>
        <active>true</active>
        <label>Economy Class</label>
    </recordTypes>
    <recordTypes>
        <fullName>FirstClass</fullName>
        <active>true</active>
        <label>First Class</label>
    </recordTypes>
    <recordTypes>
        <fullName>PremiumEconomyClass</fullName>
        <active>true</active>
        <label>Premium Economy Class</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>